<resources>
    <string name="app_name">PCS</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="user_id">User ID</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register">Register?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="national_id_card">National ID Card</string>
    <string name="email">Email</string>
    <string name="full_name">Full Name</string>
    <string name="address">Address</string>
    <string name="choose_gender">Choose Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="select_your_age">Select Your Age</string>
    <string name="symptom">Symptom</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="pressure">Pressure</string>
    <string name="temperature">Temperature</string>
    <string name="description">Description</string>
    <string name="add">ADD</string>
    <string name="login">Login</string>
    <string name="patient">Patient</string>
    <string name="doctor">Doctor</string>
    <string name="phone_number">Phone Number</string>
    <string name="next">Next</string>
    <string name="password_updated">Password Updated!</string>
    <string name="your_password_has_been_changed">your password has been changed</string>
    <string name="medical_condition">Medical Condition</string>
    <string name="allergy">Allergy</string>
    <string name="update">Update</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="new_password">New Password</string>
    <string name="enter_one_time_password_nsent_on_n_66809703295">Enter One Time Password\nSent On\n +66809703295</string>
    <string name="avatar">Avatar</string>
    <string name="history">History</string>
    <string name="temp">Temp.</string>
    <string name="recents">Recents</string>
    <string name="function">Function</string>
    <string name="profile">Profile</string>
    <string name="security">Security</string>
    <string name="language">Language</string>
    <string name="setting">Setting</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="understand">Understand</string>
    <string name="have_a_login_page_before_using_patient_checking_system_application_and_safe_to_use_firebase_to_store_critical_parts_of_your_data">Have a Login Page before using Patient Checking System Application and safe to use Firebase to store critical parts of your data</string>
    <string name="bright">Bright</string>
    <string name="music">Music</string>
    <string name="on">ON</string>
    <string name="select_language">Select Language</string>
    <string name="user_empty">User ID can not be Empty</string>
    <string name="password_empty">Password can not be Empty</string>
    <string name="verify_code">Verify Code</string>
    <string name="this_application">This application was createn from the brainstorming of students Computer Engineering Kasetsart University Kamphaeng Saen Campus foreseen that Currently, there are not enough medical personnel to take care of COVID patients. resulting in inadequate care and work hard this app is designed to respond to these problems and increase the efficiency of healthcare workers. speed up time accessible to all patients And the patient himself can fill out the information and send it to the doctor. comfortably Easy to use as well.</string>
    <string name="save" translatable="false">Save</string>
    <string name="off" translatable="false">Off</string>


    <string name="docter_id">Docter ID</string>
    <string name="pincode">Pincode</string>
    <string name="confirm_pincode">Confirm Pincode</string>
    <string name="regular_hospital">Regular Hospital</string>
    <string name="graduated">Graduated</string>
    <string name="new_pincode">New Pincode</string>
    <string name="confirm_new_pincode">Confirm New Pincode</string>
    <string name="pincode_updated">Pincode Updated</string>
    <string name="your_pincode_has_been_changed">your pincode has been changed</string>
    <string name="uid">UID</string>
    <string name="chat">Chat</string>
    <string name="info">Info</string>
    <string name="coming_soon">Coming Soon...</string>
    <string name="assessment_form">Assessment Form</string>
    <string name="comments">Comments</string>
    <string name="colors">Colors</string>
    <string name="green">Green</string>
    <string name="yellow">Yellow</string>
    <string name="red">Red</string>
    <string name="field_cannot_empty">Field can not be empty</string>
    <string name="nationalidcard_toolarge">National ID Card is too large!</string>
    <string name="select_patient">Select Patient</string>
    <string name="type_of_comments">Type of Comments</string>
    <string name="warning">Warning</string>
    <string name="appointment">Appointment</string>
    <string name="select">Select...</string>
    <string name="uid_not_match">UID does not match!</string>
    <string name="docterid_not_has">DoctorID not has!</string>
    <string name="no_such_user_exist">No such user exist!</string>
    <string name="field_can_not_be_empty">Field can not be empty</string>
    <string name="phone_number_is_too_long">Phone Number is too large!</string>
    <string name="phone_number_has_been_use">Phone Number has been use!</string>
    <string name="docter_id_has_been_use">DoctorID has been use!</string>
    <string name="pincode_mismatch">Pincode Mismatch!</string>
    <string name="error">Error</string>
    <string name="email_has_been_use">Email has been use!</string>
    <string name="docter_id_is_too_long">Doctor ID is too large!</string>
    <string name="no_white_spaces_are_allowed">No White spaces are allowed!</string>
    <string name="pincode_should_contain_4_character">Pincode should contain 4 characters!</string>
    <string name="pincode_should_not_space">Pincode should not space</string>
    <string name="pincode_should_have_alphabet_or_number">Pincode should have Alphabet or Number</string>
    <string name="invalid_email">Invalid Email!</string>
    <string name="national_id_card_is_too_short">National ID Card is too short!</string>
    <string name="docter_id_and_phone_number_does_not_match">Doctor ID and Phone Number does not match!</string>
    <string name="please_select_gender">Please Select Gender</string>
    <string name="you_are_not_eligible_to_apply">You are not eligible to apply</string>
    <string name="passwprd_not_match">Password not match!</string>
    <string name="password_should_contain_4_characters">Password should contain 4 characters!</string>
    <string name="password_should_not_space">Password should not space</string>
    <string name="password_should_have_alphabet_or_number">Password should have Alphabet or Number</string>
    <string name="please_select_a_language">Please select a Language</string>
    <string name="pincode_does_not_match">Pincode does not match!</string>
    <string name="com_user_and_phone_number_does_not_match">User and Phone Number does not match!</string>
    <string name="username_is_too_large">Username is too large!</string>
    <string name="choose_success">Choose Success</string>
    <string name="verification_completed">Verification Completed</string>
    <string name="verification_not_completed">Verification Not Completed! Try again.</string>
    <string name="color">"Color"</string>
    <string name="enter_one_time_password_sent_on">"Enter One Time Password Sent On "</string>
    <string name="phone">Phone</string>
    <string name="birthday">Birthday</string>
    <string name="you_are_not_connected_to_a">You are not connected to a</string>
    <string name="please_provide_doctor_id_and_uid">Please provide Doctor ID and UID</string>
    <string name="connection_request">Connection Request</string>
    <string name="personal_doctor">Personal Doctor</string>
    <string name="for_application">for application</string>
    <string name="development_guidelines">development guidelines</string>
    <string name="packages_form">Packages Form</string>
    <string name="config_guidelines">config guidelines</string>
    <string name="hospital_form">Hospital Form</string>
    <string name="for_application_increase">for application increase</string>
    <string name="hospital_guidelines">hospital guidelines</string>
    <string name="vaccine_form">Vaccine Form</string>
    <string name="for_application_help">for application help</string>
    <string name="vaccine_guidelines">vaccine guidelines</string>
    <string name="welcome_nthis_is_history_nyou_are_in">Welcome\nThis is History!!!\nYou are In.</string>
    <string name="user_has_been_use">User has been use!</string>
    <string name="add_symptom_success">Add Symptom Success!</string>
    <string name="color_none">Color: None</string>
    <string name="add_color_success">Add Color Success!</string>
    <string name="add2">\"Add \"</string>
    <string name="success">\" Success!\"</string>
    <string name="doctor_has_been_use">DoctorID has been use!</string>
    <string name="doctor_not_has">DoctorID not has!</string>
    <string name="national_id">National ID</string>
    <string name="medical">Medical</string>
    <string name="don_t_have_any_comments_n_from_your_doctor">Don\'t have any Comments\n from your Doctor</string>
    <string name="m_no_nr_ne">M\no\nr\ne</string>
</resources>
