<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/BottomSheetContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet_background"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/colors"
        android:fontFamily="@font/promptbold"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textColor="#000000"
        android:textSize="18sp"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="30dp"
        android:background="#DCDCDC" />

    <RadioGroup
        android:id="@+id/Radio_Color"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginVertical="10dp"
        android:orientation="horizontal">


        <RadioButton
            android:id="@+id/Green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/green"
            android:fontFamily="@font/promptlight"/>


        <RadioButton
            android:id="@+id/Yellow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/yellow"
            android:fontFamily="@font/promptlight"/>


        <RadioButton
            android:id="@+id/Red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/red"
            android:fontFamily="@font/promptlight"/>
    </RadioGroup>

    <Button
        android:id="@+id/Understand"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="25dp"
        android:text="@string/understand"
        android:fontFamily="@font/promptbold"
        android:textSize="18sp"
        android:textStyle="bold"
        android:background="@drawable/yobutton"/>
</LinearLayout>