<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NotiDoctorFragment"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Notifications"
        android:textSize="60sp"
        android:fontFamily="@font/promptbold" />

    <RadioGroup
        android:id="@+id/Radio_Color"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginVertical="10dp"
        android:orientation="horizontal">


        <RadioButton
            android:id="@+id/Green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/green"
            android:fontFamily="@font/promptlight"/>


        <RadioButton
            android:id="@+id/Yellow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/yellow"
            android:fontFamily="@font/promptlight"/>


        <RadioButton
            android:id="@+id/Red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/red"
            android:fontFamily="@font/promptlight"/>
    </RadioGroup>

</LinearLayout>