<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/BottomSheetContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet_background"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/symptom"
        android:fontFamily="@font/promptbold"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textColor="#000000"
        android:textSize="18sp"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="10dp"
        android:layout_marginHorizontal="30dp"
        android:background="#DCDCDC" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="36dp"
        android:layout_marginVertical="12dp">

        <TextView
            android:id="@+id/Date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/date"
            android:fontFamily="@font/promptlight"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/Time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/time"
            android:fontFamily="@font/promptlight"
            android:textSize="20sp"
            android:textColor="@color/black"/>
    </RelativeLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Pressure"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pressure"
        android:textColorHint="@color/background"
        app:boxStrokeColor="@color/colorPrimary"
        app:boxStrokeErrorColor="#FF5D5D"
        app:boxStrokeWidthFocused="2dp"
        app:counterTextColor="@color/background"
        app:endIconMode="clear_text"
        app:endIconTint="@color/background"
        app:hintTextColor="@color/background"
        app:startIconDrawable="@drawable/gauge"
        app:startIconTint="@color/background"
        android:layout_marginHorizontal="26dp">


        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number"
            android:fontFamily="@font/promptlight"
            android:textColor="@color/background"
            android:textCursorDrawable="@null" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Temperature"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/temperature"
        android:textColorHint="@color/background"
        app:boxStrokeColor="@color/colorPrimary"
        app:boxStrokeErrorColor="#FF5D5D"
        app:boxStrokeWidthFocused="2dp"
        app:counterTextColor="@color/background"
        app:endIconMode="clear_text"
        app:endIconTint="@color/background"
        app:hintTextColor="@color/background"
        app:startIconDrawable="@drawable/thermometer"
        app:startIconTint="@color/background"
        android:layout_marginHorizontal="26dp">


        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number"
            android:fontFamily="@font/promptlight"
            android:textColor="@color/background"
            android:textCursorDrawable="@null" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Description"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:textColorHint="@color/background"
        app:boxStrokeColor="@color/colorPrimary"
        app:boxStrokeErrorColor="#FF5D5D"
        app:boxStrokeWidthFocused="2dp"
        app:counterTextColor="@color/background"
        app:endIconMode="clear_text"
        app:endIconTint="@color/background"
        app:hintTextColor="@color/background"
        app:startIconDrawable="@drawable/jobseeking"
        app:startIconTint="@color/background"
        android:layout_marginHorizontal="26dp"
        android:layout_marginBottom="12dp">


        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:fontFamily="@font/promptlight"
            android:textColor="@color/background"
            android:textCursorDrawable="@null" />
    </com.google.android.material.textfield.TextInputLayout>




    <Button
        android:id="@+id/ADD"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="25dp"
        android:text="@string/add"
        android:fontFamily="@font/promptbold"
        android:textSize="18sp"
        android:textStyle="bold"
        android:background="@drawable/yobutton"/>
</LinearLayout>