<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/night"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".DNewPinChange">


    <LinearLayout
        android:id="@+id/lay2"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="26dp"
            android:background="@drawable/done" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/promptbold"
            android:gravity="center"
            android:text="@string/pincode_updated"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="30sp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/promptlight"
            android:gravity="center"
            android:text="@string/your_pincode_has_been_changed"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />


        <Button
            android:id="@+id/BackMenu"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:background="@drawable/yobutton"
            android:text="@string/login"
            android:fontFamily="@font/promptbold"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>


</RelativeLayout>