<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PSetNewPassword"
    android:background="#C8F4EB">


    <LinearLayout
        android:id="@+id/lay1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/lay2"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp">

        <ImageView
            android:id="@+id/titletext"
            android:layout_width="150dp"
            android:layout_height="110dp"
            android:layout_gravity="center"
            android:background="@drawable/patient"
            android:transitionName="transition_title"></ImageView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lay2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <View
            android:layout_width="326dp"
            android:layout_height="2dp"
            android:layout_gravity="center"
            android:background="#FFFFFF"></View>

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/Password"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/new_password"
                    android:layout_marginTop="20dp"
                    android:textColorHint="@color/background"
                    app:boxStrokeColor="@color/background"
                    app:boxStrokeErrorColor="#FF5D5D"
                    app:boxStrokeWidthFocused="2dp"
                    app:counterEnabled="true"
                    app:counterMaxLength="20"
                    app:counterTextColor="@color/background"
                    app:endIconMode="password_toggle"
                    app:endIconTint="@color/background"
                    app:hintTextColor="@color/background"
                    app:startIconDrawable="@drawable/password"
                    app:startIconTint="@color/background">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textPassword"
                        android:textColor="@color/background"
                        android:textCursorDrawable="@null" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ConPass"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_new_password"
                    android:textColorHint="@color/background"
                    app:boxStrokeColor="@color/background"
                    app:boxStrokeErrorColor="#FF5D5D"
                    app:boxStrokeWidthFocused="2dp"
                    app:counterEnabled="true"
                    app:counterMaxLength="20"
                    app:counterTextColor="@color/background"
                    app:endIconMode="password_toggle"
                    app:endIconTint="@color/background"
                    app:hintTextColor="@color/background"
                    app:startIconDrawable="@drawable/password"
                    app:startIconTint="@color/background">


                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textPassword"
                        android:textColor="@color/background"
                        android:textCursorDrawable="@null" />
                </com.google.android.material.textfield.TextInputLayout>



            </LinearLayout>

        <Button
            android:id="@+id/Next"
            android:layout_width="350dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@drawable/yobutton"
            android:onClick="setNewPasswordBtn"
            android:text="@string/update"
            android:textColor="#fff"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:transitionName="transition_nextbtn"
            app:backgroundTint="@null">

        </Button>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/Patient"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/buttondorp"
            android:text="@string/patient"
            android:textColor="#000"
            android:transitionName="transition_patient_btn"
            app:backgroundTint="@null">

        </Button>

        <Button
            android:id="@+id/Doctor"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/buttonpord"
            android:text="@string/doctor"
            android:textColor="#000"
            android:transitionName="transition_doctor_btn"
            app:backgroundTint="@null">

        </Button>
    </LinearLayout>
</RelativeLayout>