<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="408dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:layout_margin="50dp"
        app:cardBackgroundColor="#FFFFFF"
        app:cardCornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="320dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24.5dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/promptbold"
                android:text="@string/security"
                android:textAllCaps="true"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ScrollView
                android:layout_width="230dp"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="6dp"
                android:scrollbarThumbVertical="@drawable/thumbscroll"
                android:scrollbars="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/promptlight"
                    android:gravity="center_horizontal"
                    android:text="@string/have_a_login_page_before_using_patient_checking_system_application_and_safe_to_use_firebase_to_store_critical_parts_of_your_data" />
            </ScrollView>

            <Button
                android:id="@+id/Understand"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="10dp"
                android:background="@drawable/yobutton"
                android:fontFamily="@font/promptbold"
                android:text="@string/understand"
                android:textSize="18sp" />

        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/exit"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginBottom="235dp"
        android:background="@drawable/exit"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="@+id/cardView"
        app:layout_constraintHorizontal_bias="0.91"
        app:layout_constraintStart_toStartOf="@+id/cardView" />

</androidx.constraintlayout.widget.ConstraintLayout>